# GoalTracker

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: __init__.py  goals.py  tasks.py
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: GoalCard.jsx  GoalForm.jsx  TaskForm.jsx  TaskItem.jsx  TaskList.jsx
frontend/src/pages/: GoalDetailPage.jsx  GoalTasksPage.jsx  GoalsPage.jsx
frontend/src/styles/: app.css
src/goal_tracker/: __init__.py  __main__.py  app.py
